scrollbar fixing

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,7 +8,7 @@ body {
   background-color: #1a1918;
 }
 
-html {
+body {
   scrollbar-color: #1a1918, #f3b062;
 }
 
